[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Léo GATELLIER <5900786-lgatellier@users.noreply.gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
